moves to zam repo, adds source edit plugin

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ckeditor/strapi-plugin-ckeditor",
+  "name": "@zam/strapi-plugin-ckeditor",
   "version": "0.0.7",
   "description": "CKEditor 5 custom field for Strapi.",
   "strapi": {
@@ -7,6 +7,9 @@
     "description": "The rich text editor for every use case",
     "kind": "plugin",
     "displayName": "CKEditor"
+  },
+  "publishConfig": {
+    "registry": "https://npm.k8s.zam.com/"
   },
   "keywords": [
     "strapi",
@@ -51,6 +54,7 @@
     "@ckeditor/ckeditor5-paste-from-office": "^36.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.6",
     "@ckeditor/ckeditor5-remove-format": "^36.0.0",
+    "@ckeditor/ckeditor5-source-editing": "^36.0.0",
     "@ckeditor/ckeditor5-special-characters": "^36.0.0",
     "@ckeditor/ckeditor5-table": "^36.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^36.0.0",
