--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zam/strapi-plugin-ckeditor",
-  "version": "0.0.9",
+  "version": "0.0.10-beta.0",
   "description": "CKEditor 5 custom field for Strapi.",
   "strapi": {
     "name": "ckeditor",
@@ -62,6 +62,7 @@
     "@ckeditor/ckeditor5-word-count": "^39.0.2",
     "@reinmar/ckeditor5-maximum-length": "^0.0.1",
     "@zam/ckeditor5-ffxiv-lodestone-tooltip": "^1.0.1",
+    "@zam/ckeditor5-ffxiv-etro-embed": "^0.0.1-beta.0",
     "ckeditor5": "^39.0.2"
   },
   "peerDependencies": {
