upticks zam plugins

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zam/strapi-plugin-ckeditor",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-beta.1",
   "description": "CKEditor 5 custom field for Strapi.",
   "strapi": {
     "name": "ckeditor",
@@ -61,8 +61,8 @@
     "@ckeditor/ckeditor5-upload": "^40.0.0",
     "@ckeditor/ckeditor5-word-count": "^40.0.0",
     "@reinmar/ckeditor5-maximum-length": "^0.0.1",
-    "@zam/ckeditor5-ffxiv-lodestone-tooltip": "^1.0.3",
-    "@zam/ckeditor5-ffxiv-etro-embed": "^1.0.0",
+    "@zam/ckeditor5-ffxiv-lodestone-tooltip": "^1.1.0-beta.0",
+    "@zam/ckeditor5-ffxiv-etro-embed": "^1.1.0-beta.0",
     "ckeditor5": "^40.0.0"
   },
   "peerDependencies": {
