--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zam/strapi-plugin-ckeditor",
-  "version": "0.0.15-0",
+  "version": "1.0.0",
   "description": "CKEditor 5 custom field for Strapi.",
   "strapi": {
     "name": "ckeditor",
@@ -61,7 +61,7 @@
     "@ckeditor/ckeditor5-upload": "^41.1.0",
     "@ckeditor/ckeditor5-word-count": "^41.1.0",
     "@reinmar/ckeditor5-maximum-length": "^0.0.1",
-    "@zam/ckeditor5-ffxiv-lodestone-tooltip": "^1.1.0",
+    "@zam/ckeditor5-ffxiv-lodestone-tooltip": "^2.0.0",
     "@zam/ckeditor5-ffxiv-etro-embed": "^1.0.0",
     "ckeditor5": "^41.1.0"
   },
